# SDL_Snake

./: CMakeLists.txt  Makefile  README.md  main.cpp
logic/: AutoUpdated.cpp  AutoUpdated.h  BodyLink.cpp  BodyLink.h  FoodSpawner.cpp  FoodSpawner.h  Snake.cpp  Snake.h
screen/: EventHandler.cpp  EventHandler.h  FoodRenderer.cpp  FoodRenderer.h  Renderer.cpp  Renderer.h  SnakeRenderer.cpp  SnakeRenderer.h
utils/: Bounded.cpp  Bounded.h  Consts.h  Link.h  Structs.h  Utils.cpp  Utils.h
